--- a/src/app/styles/globals.css
+++ b/src/app/styles/globals.css
@@ -1,44 +1,63 @@
 @import "tailwindcss";
 
 :root {
-  --primary-color: #f28e51;
-  --secondary-color: #6366f1;
+    --font-family-sans: font-family: Roboto, -apple-system, BlinkMacSystemFont, Helvetica, Arial, sans-serif;
+    --font-family-mono: "Roboto Mono", SFMono-Regular, Consolas, Menlo, monospace;
 
-  --text: #ddd;
-  --text-hover: #fff;
-  --text-muted: #999;
-  --background: linear-gradient(0deg, var(--primary-color) 0%, var(--secondary-color) 100%) center center/cover no-repeat fixed;
+    --text: #eee;
 
-  --button-text: #eee;
-  --button-text-hover: #fff;
-  --button-background: none;
-  --button-background-hover: linear-gradient(to bottom right, var(--secondary-color) 0%, var(--primary-color) 100%);
-  --button-background-selected: linear-gradient(to bottom right, var(--secondary-color) 25%, var(--primary-color) 100%);
+    --background-color: hsla(0, 6%, 27%, 0.5);
+    --backdrop-filter: blur(7px) saturate(120%);
+
+    --tr-border-style: 2px solid #ffffff5b;
+
+    --button-color: hsla(0, 0%, 100%, 0.1);
+    --button-hover-color: #ffffff5b;
 }
 
-body,
-nav {
-  background: var(--background);
-  color: var(--text);
-  font-family: Inter, ui-sans-serif, system-ui, -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Helvetica Neue, Arial, Noto Sans, sans-serif, Apple Color Emoji, Segoe UI Emoji, Segoe UI Symbol, Noto Color Emoji;
+*,
+html {
+    box-sizing: border-box;
+    scroll-behavior: smooth
 }
 
-nav button {
-  border-radius: .375rem;
-  font-weight: 500;
-  color: var(--button-text);
-  background: var(--button-background);
-}
-
-nav button:hover {
-  color: var(--button-text-hover);
-  background: var(--button-background-hover);
-}
-
-nav button.selected {
-  background: var(--button-background-selected);
+body {
+    background: url('/background.jpg') no-repeat center center/cover fixed;
+    color: var(--text);
+    font-family: var(--font-family-sans);
 }
 
 .background {
-  background: var(--background);
+    background: var(--background-color);
+    backdrop-filter: var(--backdrop-filter);
+}
+
+button:hover {
+    cursor: pointer;
+}
+
+.custom-button svg {
+    background-color: var(--button-color);
+    padding: calc(var(--spacing));
+    border-radius: var(--radius-xl);
+    margin-left: calc(var(--spacing) * 3);
+    margin-right: calc(var(--spacing) * 3);
+    min-width: 32px;
+    min-height: 32px;
+    padding: 4px;
+}
+
+nav button {
+    margin: auto;
+    padding: calc(var(--spacing) * 2);
+    border-radius: var(--radius-xl);
+}
+
+nav button.selected {
+    background-color: var(--button-color);
+}
+
+.custom-button:hover svg,
+nav button:hover {
+    background-color: var(--button-hover-color);
 }
