feat: add responsive webpage

--- a/src/app/styles/globals.css
+++ b/src/app/styles/globals.css
@@ -22,7 +22,7 @@ html {
 }
 
 body {
-    background: url('/background.jpg') no-repeat center center/cover fixed;
+    background: url('/background.png') no-repeat center center/cover fixed;
     color: var(--text);
     font-family: var(--font-family-sans);
 }
@@ -30,6 +30,10 @@ body {
 .background {
     background: var(--background-color);
     backdrop-filter: var(--backdrop-filter);
+}
+
+main {
+    margin-right: calc(var(--spacing) * 16);
 }
 
 button:hover {
@@ -48,7 +52,7 @@ button:hover {
 }
 
 nav button {
-    margin: auto;
+    margin: calc(var(--spacing) * 2);
     padding: calc(var(--spacing) * 2);
     border-radius: var(--radius-xl);
 }
@@ -60,4 +64,26 @@ nav button.selected {
 .custom-button:hover svg,
 nav button:hover {
     background-color: var(--button-hover-color);
+}
+
+nav {
+    right: -141px;
+    transition: all 0.7s ease;
+}
+
+nav.open,
+nav:hover {
+    right: 0;
+}
+
+@media (max-width: 640px) {
+    main {
+        margin-right: 0;
+        padding-left: 8px;
+        padding-right: 8px;
+    }
+
+    nav {
+        right: -100%;
+    }
 }
