--- a/src/app/styles/webservice-editor.css
+++ b/src/app/styles/webservice-editor.css
@@ -3,7 +3,7 @@
     backdrop-filter: var(--backdrop-filter);
     border-radius: var(--radius-xl);
     margin: auto;
-    padding: calc(var(--spacing) * 4) calc(var(--spacing) * 8);
+    padding: calc(var(--spacing) * 8);
     font-family: var(--font-family-mono);
     line-height: 4rem;
     max-width: 60rem;
@@ -23,4 +23,20 @@
 
 .p-datatable-dragpoint-bottom {
     background: var(--background-color);
+}
+
+@media (max-width: 640px) {
+    .p-datatable {
+        padding: calc(var(--spacing) * 4);
+    }
+}
+
+@media (max-width: 1024px) {
+    .p-datatable .url {
+        display: none;
+    }
+
+    .p-datatable {
+        max-width: 35rem;
+    }
 }
